--- a/styles/login.css
+++ b/styles/login.css
@@ -1,7 +1,7 @@
 .login {
 	margin: 0 auto;
 	height: 100dvh;
-	background-image: url(../../images/pexels-photo-7135027.webp);
+	background-image: url(../images/pexels-photo-7135027.webp);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
