--- a/styles/chat.css
+++ b/styles/chat.css
@@ -6,7 +6,7 @@
 	margin: 0;
 	margin-top: 20px;
 	font-family: Impact;
-	font-size: 50px;
+	font-size: 34px;
 	font-weight: 500;
 	text-align: center;
 }
@@ -17,7 +17,7 @@
 	padding: 10px;
 	background-color: rgb(207, 179, 179);
 	width: 87%;
-	min-height: 87dvh;
+	height: 75dvh;
 	border-radius: 4px;
 	display: grid;
 	grid-template-columns: 4fr 1fr;
