--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,26 +1,27 @@
 .footer {
 	margin: 0 auto;
 	margin-top: auto;
-	padding-top: 60px;
-	padding-bottom: 40px;
+	padding-top: 30px;
+	padding-bottom: 30px;
 	font-size: 13px;
 	font-weight: 500;
+	color: #424242;
+	background-color: #8B8B8B;
 }
 
 .footer__title {
 	font-size: inherit;
 	font-weight: inherit;
-	color: #8B8B8B;
 	text-align: center;
 }
 
 /* --------------------------------------------------------------------------- */
 .footer__group {
 	margin: 0 auto;
-	margin-top: 30px;
-	padding-top: 20px;
+	margin-top: 20px;
 	border-top: 1px solid #424242;
-	width: 85%;
+	padding-top: 20px;
+	width: 87%;
 	display: flex;
 	justify-content: space-between;
 }
