--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,8 +5,9 @@
 	padding-bottom: 30px;
 	font-size: 13px;
 	font-weight: 500;
-	color: #424242;
-	background-color: #8B8B8B;
+	color: rgb(209, 209, 209);
+	background-image: url(../images/footer-background.jpg);
+	background-position: center;
 }
 
 .footer__title {
@@ -19,7 +20,7 @@
 .footer__group {
 	margin: 0 auto;
 	margin-top: 20px;
-	border-top: 1px solid #424242;
+	border-top: 1px solid #878686;
 	padding-top: 20px;
 	width: 87%;
 	display: flex;
@@ -38,17 +39,18 @@
 
 .footer__link {
 	margin: 0;
-	color: black;
 	text-decoration: none;
 }
 
-.footer__link:hover {
+.footer__link:hover,
+.footer__ads:hover {
 	opacity: .7;
 	color: rgb(0, 13, 255);
 }
 
 .footer__ads {
-	/**/
+	color: inherit;
+	text-decoration: none;
 }
 
 @media screen and (min-width: 601px) and (max-width: 900px) {}
