--- a/styles/login.css
+++ b/styles/login.css
@@ -11,9 +11,9 @@
 
 .login__form {
 	margin: auto;
-	padding-top: 50px;
-	padding-bottom: 50px;
-	width: 40dvw;
+	padding-top: 45px;
+	padding-bottom: 45px;
+	width: 35dvw;
 	min-width: 310px;
 	display: flex;
 	flex-direction: column;
@@ -22,21 +22,21 @@
 	background-color: rgba(255, 166, 0, 0.1);
 	backdrop-filter: blur(15px);
 	box-shadow: 0 0 30px 0px rgba(0, 0, 0, .5);
-	border-radius: 10px;
+	border-radius: 9px;
 	border: 1px solid rgba(255, 255, 255, .5);
 }
 
 .login__form-title {
 	text-align: center;
-	margin-bottom: 40px;
+	margin-bottom: 25px;
 }
 
 .login__form-input {
 	margin-top: 20px;
 	width: 80%;
-	height: 35px;
-	font-size: 12px;
-	border-radius: 10px;
+	height: 30px;
+	font-size: 70%;
+	border-radius: 9px;
 }
 
 .login__form-input:hover,
@@ -45,7 +45,7 @@
 }
 
 .form__submit-button {
-	margin-top: 60px;
+	margin-top: 55px;
 	width: 80%;
 	height: 35px;
 	font-size: 18px;
@@ -54,7 +54,7 @@
 	font-family: 'a-rewinderotl.woff2';
 	letter-spacing: 2px;
 	color: rgb(64, 5, 17);
-	border-radius: 10px;
+	border-radius: 9px;
 	background-color: rgba(0, 250, 250, 1);
 	/* фон просвечивает */
 }
