--- a/styles/chat.css
+++ b/styles/chat.css
@@ -14,13 +14,13 @@
 	text-align: center;
 }
 
-.chatbox {
+.chat__box {
 	margin: 0 auto;
 	margin-top: 25px;
 	padding: 10px;
 	background-color: rgb(207, 179, 179);
 	width: 87%;
-	height: 75dvh;
+	height: 81dvh;
 	border-radius: 4px;
 	display: grid;
 	grid-template-columns: 4fr 1fr;
@@ -33,18 +33,18 @@
 		"footer footer";
 }
 
-.chat__message {
+.chat__wmessage {
 	text-align: center;
 }
 
-.messagespane {
+.chat__messages-pane {
 	overflow-y: hidden;
 	background-color: rgb(255, 255, 255);
 	display: grid;
 	grid-template-rows: repeat(34, 1fr);
 }
 
-.userspane {
+.chat__users-pane {
 	overflow-y: hidden;
 	background-color: rgb(255, 255, 255);
 	display: grid;
@@ -57,9 +57,14 @@
 	grid-area: footer;
 }
 
+/* сделать адаптивную высоту инпута */
+
 .chat__username {
-	width: fit-content;
-	margin-right: 5px;
+	margin-right: 4px;
+	padding: 7px;
+	width: 85px;
+	border: 1px solid rgb(159, 81, 36);
+	border-radius: 13px 0 0 13px;
 }
 
 .chat__username:hover {
@@ -67,9 +72,9 @@
 }
 
 .chat__input {
+	margin-right: 2px;
 	width: 82%;
 	height: 28px;
-	margin-right: 2px;
 	border-radius: 4px 0 0 4px;
 }
 
