--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,18 +7,21 @@
 	font-weight: 500;
 	color: rgb(209, 209, 209);
 	background-image: url(../images/footer-background.jpg);
-	background-position: center;
+	background-position: top; 
+	background-repeat: no-repeat; 
+	background-size: 100% 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .footer__title {
 	font-size: inherit;
 	font-weight: inherit;
-	text-align: center;
 }
 
-/* --------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------- */
 .footer__group {
-	margin: 0 auto;
 	margin-top: 20px;
 	border-top: 1px solid #878686;
 	padding-top: 20px;
@@ -27,30 +30,19 @@
 	justify-content: space-between;
 }
 
-.footer__copyright {
-	/**/
-}
-
 .footer__links {
-	list-style-type: none;
 	display: flex;
 	gap: 30px;
 }
 
-.footer__link {
-	margin: 0;
-	text-decoration: none;
+.footer__ad {
+	color: inherit;
 }
 
-.footer__link:hover,
-.footer__ads:hover {
+.footer__text:hover,
+.footer__ad:hover {
 	opacity: .7;
 	color: rgb(0, 13, 255);
-}
-
-.footer__ads {
-	color: inherit;
-	text-decoration: none;
 }
 
 @media screen and (min-width: 601px) and (max-width: 900px) {}
@@ -66,17 +58,14 @@
 		font-size: 12px;
 	}
 
-	.footer__text {
-		margin-top: 30px;
-	}
-
 	.footer__links {
 		flex-direction: column;
 		align-items: center;
 		gap: 12px;
 	}
 
-	.footer__link {
+	.footer__text {
 		display: block;
+		/*?*/
 	}
 }
