--- a/styles/login.css
+++ b/styles/login.css
@@ -2,9 +2,9 @@
 	margin: 0 auto;
 	height: 100dvh;
 	background-image: url(../images/pexels-photo-7135027.webp);
+	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: center;
 	display: flex;
 	flex-direction: column;
 }
@@ -21,9 +21,9 @@
 	/*backface-visibility:hidden;*/
 	background-color: rgba(255, 166, 0, 0.1);
 	backdrop-filter: blur(15px);
-	box-shadow: 0 0 30px 0px rgba(0, 0, 0, .5);
-	border-radius: 9px;
 	border: 1px solid rgba(255, 255, 255, .5);
+	border-radius: 9px;
+	box-shadow: 0 0 30px 0px rgba(0, 0, 0, .5);
 }
 
 .login__form-title {
@@ -48,13 +48,13 @@
 	margin-top: 55px;
 	width: 80%;
 	height: 35px;
+	border-radius: 9px;
 	font-size: 18px;
 	font-weight: 800;
 	/* текст двойной линией */
 	font-family: 'a-rewinderotl.woff2';
 	letter-spacing: 2px;
 	color: rgb(64, 5, 17);
-	border-radius: 9px;
 	background-color: rgba(0, 250, 250, 1);
 	/* фон просвечивает */
 }
@@ -66,7 +66,7 @@
 .form__text {
 	margin-top: 30px;
 	width: 270px;
-	/* анти-градиент */
+	/* в направлении анти-градиент */
 	color: rgb(90, 81, 47);
 	font-size: 12px;
 	align-self: center;
