--- a/styles/chat.css
+++ b/styles/chat.css
@@ -14,6 +14,10 @@
 	text-align: center;
 }
 
+.chat__title-gray {
+	color: rgb(128, 128, 128);
+}
+
 .chat__box {
 	margin: 0 auto;
 	margin-top: 25px;
@@ -36,6 +40,7 @@
 	overflow-y: hidden;
 	background-color: rgb(173, 252, 128);
 	display: grid;
+	grid-template-columns: 1fr 10fr;
 	grid-template-rows: repeat(16, 1fr);
 	row-gap: 2px;
 }
@@ -44,19 +49,26 @@
 	overflow-y: hidden;
 	background-color: rgb(173, 252, 128);
 	display: grid;
+	grid-template-columns: 1fr 10fr;
 	grid-template-rows: repeat(16, 1fr);
 	row-gap: 2px;
 }
 
 .chat__wmessage {
-	line-height: 2;
+	line-height: 200%;
 	text-align: center;
 }
 
-.chat__cell{
+.chat__cell {
 	height: 29px;
 	background-color: rgb(255, 255, 255);
 }
+
+.chat__cell-time {
+	background-color: rgb(224, 154, 154);
+}
+
+/* При адаптивности надо hmax поделить на высоту ячейки, округлить до целого числа и использовать это число как количество строк, на которое делится высота панели, заполняющих панель, но с разным промежутком, т.к. число не целое. Посмотреть, auto-fill  - это тоже самое ? */
 
 .chat__form {
 	display: flex;
