--- a/styles/login.css
+++ b/styles/login.css
@@ -35,7 +35,8 @@
 	margin-top: 20px;
 	width: 80%;
 	height: 30px;
-	font-size: 70%;
+	padding-left: 8px;
+	font-size: 69%;
 	border-radius: 9px;
 }
 
