--- a/styles/footer.css
+++ b/styles/footer.css
@@ -7,8 +7,8 @@
 	font-weight: 500;
 	color: rgb(209, 209, 209);
 	background-image: url(../images/footer-background.jpg);
-	background-position: top; 
-	background-repeat: no-repeat; 
+	background-position: top;
+	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	display: flex;
 	flex-direction: column;
@@ -22,6 +22,7 @@
 
 /* ------------------------------------------------------------------------- */
 .footer__group {
+	margin: 0 auto;
 	margin-top: 20px;
 	border-top: 1px solid #878686;
 	padding-top: 20px;
