--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,17 @@
 .header {
 	margin: 0 auto;
-	height: 70px;
+	width: 87%;
+	display: flex;
+	justify-content: space-between;
 }
 
 .header__logo {
-	
+	width: 168px;
+	height: 50px;
+	/*background-color:  transparent;*/
+	background-image: url(../images/chat-logo.png);
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .header__button {}
